--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pickle_mixin==1.0.2
 Plost==0.2.5
 plotly==5.7.0
 requests==2.27.1
-scikit_learn==1.1.1
+scikit_learn
 seaborn==0.11.2
 streamlit==1.9.0
 streamlit_option_menu==0.3.2
